--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
         </div>
       </div>
       <div class="text-wrap col-12 col-md-8">
-        <h2 class="username">Christoph Jabs</h2>
+        <h2 class="username">Choi, Gunhee</h2>
         <div class="description"><p>creator of the Grape-Academic-Theme! Grape-Academic-Theme is a modification of the Grape-Theme by naye0ng, making it more suitable as an academic portfolio.</p>
 </div>
 
