--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
     <div class="row">
       <div class="img-wrap col-12 col-md-4">
         <div class="img">
-          <img src="/assets/img/my.png" alt="user_image">
+          <img src="/assets/img/my.jpg" alt="user_image">
         </div>
       </div>
       <div class="text-wrap col-12 col-md-8">
@@ -152,13 +152,13 @@
   <ul class="exper-list">
     
     <li class="meta">
-      <p class="date">2012-03 &ndash; 2018-02</p>
-      <p class="description">Dankook Univ, Software BS</p>
+      <p class="date">2018-03 &ndash; ~</p>
+      <p class="description">Dankook Univ, CS Ph.D Course</p>
     </li>
 
     <li class="meta">
-      <p class="date">2017-05-03 &ndash; 2018-05-06</p>
-      <p class="description">company name, title</p>
+      <p class="date">2012-03 &ndash; 2018-02</p>
+      <p class="description">Dankook Univ, Software BS</p>
     </li>
     
   </ul>
