--- a/index.html
+++ b/index.html
@@ -183,51 +183,17 @@
     [<a class="btn" href="/publications" title="Publications">All Publications</a>]
     <ol class="bibliography"><li><!-- Entry bib key -->
 <div id="test">
-  
-  <!-- Title -->
-  <div class="title">An Article</div>
-  <!-- Author -->
-  <div class="author">
-            <em>Me, Myself</em>,&nbsp;and <a href="https://www.google.com/search?q=them+others" target="_blank" rel="noopener noreferrer">Others, Them</a>
-            
-  </div>
 
-  <!-- Journal/Book title and date -->
-  
-  <div class="third-line">
-    Some important journal, 2010
-  </div>
-</div></li>
-<li><!-- Entry bib key -->
-<div id="ruby">
-  
-  <!-- Title -->
-  <div class="title">The Ruby Programming Language</div>
-  <!-- Author -->
-  <div class="author">Flanagan, David,&nbsp;and Matsumoto, Yukihiro
-  </div>
+  <div class="title">A New {LSM-style} Garbage Collection Scheme for {ZNS}{SSDs}</div>
+  <div class="author">Gunhee Choi, Kwanghee Lee, Myunghoon Oh, Jongmoo Choi, Jhuyeong Jhin, Yongseok Oh</div>
+  <div class="third-line">2020, 12th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage 20)</div>
+  <div class="third-line"><a href="https://www.usenix.org/conference/hotstorage20/presentation/choi">Link</a></div>
 
-  <!-- Journal/Book title and date -->
-  
-  <div class="third-line">
-    2008
-  </div>
-</div></li>
-<li><!-- Entry bib key -->
-<div id="DBLP:conf/sat/FuM06">
-  
-  <!-- Title -->
-  <div class="title">On Solving the Partial MAX-SAT Problem</div>
-  <!-- Author -->
-  <div class="author">Fu, Zhaohui,&nbsp;and Malik, Sharad
-  </div>
+  <div class="title">리눅스 환경에서의 THP 성능 분석</div>
+  <div class="author">손주형, 최건희, 구성민, 최종무</div>
+  <div class="third-line">2016, 한국정보과학회 학술발표논문집, 1141-1143</div>
+  <div class="third-line"><a href="https://www.dbpia.co.kr/pdf/pdfView.do?nodeId=NODE07503273&googleIPSandBox=false&mark=0&useDate=&ipRange=false&accessgl=Y&language=ko_KR&hasTopBanner=true">Link</a></div>
 
-  <!-- Journal/Book title and date -->
-  
-  <div class="third-line">
-    In Theory and Applications of Satisfiability Testing — SAT 2006, 9th
-                 International Conference, Seattle, WA, USA, August 12–15, 2006, Proceedings, vol. 4121, pp. 252–265, 2006
-  </div>
 </div></li></ol>
   </div>
 </section>
