--- a/index.html
+++ b/index.html
@@ -184,11 +184,13 @@
     <ol class="bibliography"><li><!-- Entry bib key -->
 <div id="test">
 
+  <div>
   <div class="title">A New {LSM-style} Garbage Collection Scheme for {ZNS}{SSDs}</div>
   <div class="author">Gunhee Choi, Kwanghee Lee, Myunghoon Oh, Jongmoo Choi, Jhuyeong Jhin, Yongseok Oh</div>
   <div class="third-line">2020, 12th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage 20)</div>
   <div class="third-line"><a href="https://www.usenix.org/conference/hotstorage20/presentation/choi">Link</a></div>
-  <span class="p"></span>
+  </div>
+  <div id="ruby">
 
   <div class="title">리눅스 환경에서의 THP 성능 분석</div>
   <div class="author">손주형, 최건희, 구성민, 최종무</div>
