--- a/index.html
+++ b/index.html
@@ -181,23 +181,28 @@
   <div class="recentpubs-wrap">
     <p class="title">RECENT PUBLICATIONS</p>
     [<a class="btn" href="/publications" title="Publications">All Publications</a>]
+    
     <ol class="bibliography"><li><!-- Entry bib key -->
-<div id="test">
+    <div id="test">
 
-  <div>
-  <div class="title">A New {LSM-style} Garbage Collection Scheme for {ZNS}{SSDs}</div>
-  <div class="author">Gunhee Choi, Kwanghee Lee, Myunghoon Oh, Jongmoo Choi, Jhuyeong Jhin, Yongseok Oh</div>
-  <div class="third-line">2020, 12th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage 20)</div>
-  <div class="third-line"><a href="https://www.usenix.org/conference/hotstorage20/presentation/choi">Link</a></div>
-  </div>
-  <div id="ruby">
+      <div class="title">A New {LSM-style} Garbage Collection Scheme for {ZNS}{SSDs}</div>
+      <div class="author">Gunhee Choi, Kwanghee Lee, Myunghoon Oh, Jongmoo Choi, Jhuyeong Jhin, Yongseok Oh</div>
+      <div class="third-line">2020, 12th USENIX Workshop on Hot Topics in Storage and File Systems (HotStorage 20)</div>
+      <div class="third-line"><a href="https://www.usenix.org/conference/hotstorage20/presentation/choi">Link</a></div>
+    </div></li></ol>
 
-  <div class="title">리눅스 환경에서의 THP 성능 분석</div>
-  <div class="author">손주형, 최건희, 구성민, 최종무</div>
-  <div class="third-line">2016, 한국정보과학회 학술발표논문집, 1141-1143</div>
-  <div class="third-line"><a href="https://www.dbpia.co.kr/pdf/pdfView.do?nodeId=NODE07503273&googleIPSandBox=false&mark=0&useDate=&ipRange=false&accessgl=Y&language=ko_KR&hasTopBanner=true">Link</a></div>
+    <ol class="bibliography"><li><!-- Entry bib key -->
+      <div id="test">
+  
+        <div class="title">리눅스 환경에서의 THP 성능 분석</div>
+        <div class="author">손주형, 최건희, 구성민, 최종무</div>
+        <div class="third-line">2016, 한국정보과학회 학술발표논문집, 1141-1143</div>
+        <div class="third-line"><a href="https://www.dbpia.co.kr/pdf/pdfView.do?nodeId=NODE07503273&googleIPSandBox=false&mark=0&useDate=&ipRange=false&accessgl=Y&language=ko_KR&hasTopBanner=true">Link</a></div>
+    </div></li></ol>
 
-</div></li></ol>
+
+
+
   </div>
 </section>
 </div>
